--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,46 @@
         android:theme="@style/Theme.Amuse"
         tools:targetApi="31">
         <activity
+            android:name=".LogIn"
+            android:exported="false" />
+        <activity
+            android:name=".SignIn"
+            android:exported="false" />
+        <activity
+            android:name=".Rewards"
+            android:exported="false" />
+        <activity
+            android:name=".MyAMUSE"
+            android:exported="false" />
+        <activity
+            android:name=".QrCodeResult"
+            android:exported="false" />
+        <activity
+            android:name=".QrScanner"
+            android:exported="false" />
+        <activity
+            android:name=".MuseumNavigator"
+            android:exported="false" />
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_API_KEY" />
+
+        <activity
+            android:name=".MuseumFinder"
+            android:exported="false"
+            android:label="@string/title_activity_museum_finder" />
+        <activity
             android:name=".Dashboard"
             android:exported="false" />
         <activity
