--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,15 @@
         android:theme="@style/Theme.Amuse"
         tools:targetApi="31">
         <activity
+            android:name=".Register"
+            android:exported="false" />
+        <activity
             android:name=".MuseumFinder"
             android:exported="false"
             android:label="@string/title_activity_museum_finder" />
         <activity
             android:name=".LogIn"
             android:exported="false" />
-
         <activity
             android:name=".Rewards"
             android:exported="false" />
